--- a/scss/heading.scss
+++ b/scss/heading.scss
@@ -32,6 +32,44 @@
         }
     }
 
+    .btn-buy {
+        z-index: 2;
+        margin-top: 40px;
+        display: flex;
+        position: relative;
+        align-items: center;
+        justify-content: center;
+        width: 140px;
+        height: 48px;
+        color: #FFF;
+        font-size: 24px;
+        font-weight: bold;
+        text-transform: uppercase;
+        border-radius: 4px;
+        text-decoration: none;
+        cursor: pointer;
+        moz-transition: all .4s ease-in-out;
+        -o-transition: all .4s ease-in-out;
+        -webkit-transition: all .4s ease-in-out;
+        transition: all .4s ease-in-out;
+        background-size: 300% 100%;
+        background-image: linear-gradient(to right, #9B513B, #FD8E28, #FD8E28, #FDBF28);
+
+        &:hover {
+            color: #000;
+            background-position: 100% 0;
+            moz-transition: all .4s ease-in-out;
+            -o-transition: all .4s ease-in-out;
+            -webkit-transition: all .4s ease-in-out;
+            transition: all .4s ease-in-out;
+            box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+
+            &:after {
+                opacity: 1;
+            }
+        }
+    }
+
     @media screen and (max-width: 576px) {
         h1 {
             display: block;
