--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'heading.scss';
 @import 'nav.scss';
 @import 'twitter.scss';
+@import 'tokenomics.scss';
 
 html {
     height: 100%;
@@ -44,15 +45,15 @@ ul, p {
   
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #4E5255; 
+    background: rgba(0,0,0,0.8); 
 }
   
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #B6BEBD; 
+    background: #FFF; 
 }
   
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #CCD2D2;
+    background: #FFF;
 }
