--- a/scss/tokenomics.scss
+++ b/scss/tokenomics.scss
@@ -12,6 +12,7 @@
         font-size: 48px;
         font-family: 'Lilita One';
         color: #FD8E28;
+        font-weight: normal;
     }
 
     ul {
