--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,16 @@
     font-size: 72px;
     font-family: 'Lilita One';
     background: rgba(0, 0, 0, 0.7);
-    border-radius: 4px; }
+    border-radius: 4px;
+    font-weight: normal;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4); }
     .heading h1 sup {
       font-size: 36px; }
   .heading p {
     display: block;
     font-size: 14px;
-    text-align: center; }
+    text-align: center;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4); }
     .heading p a {
       color: #FFF;
       text-decoration: underline; }
@@ -155,7 +158,8 @@
   padding: 60px 15px;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.6); }
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(6px); }
   .twitter img {
     max-width: 930px;
     width: 100%; }
@@ -172,7 +176,8 @@
     margin: 0 0 20px 0;
     font-size: 48px;
     font-family: 'Lilita One';
-    color: #FD8E28; }
+    color: #FD8E28;
+    font-weight: normal; }
   .tokenomics ul {
     margin: 0;
     list-style-type: none; }
@@ -192,6 +197,55 @@
         background: url("../img/token.png") no-repeat center;
         background-size: 16px; }
 
+.funding {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% - 30px);
+  padding: 60px 15px;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0) 100%);
+  backdrop-filter: blur(6px); }
+  .funding h3 {
+    margin: 0 0 20px 0;
+    font-size: 48px;
+    font-family: 'Lilita One';
+    color: #FFF;
+    font-weight: normal;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4); }
+  .funding p {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 930px;
+    font-size: 14px;
+    text-align: center;
+    padding-bottom: 40px;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4); }
+
+.rocket {
+  position: fixed;
+  z-index: 10;
+  display: block;
+  left: -40px;
+  bottom: -60px;
+  width: 104px;
+  height: 121px;
+  background: url("../img/rocket.png") no-repeat;
+  background-size: 104px 121px;
+  animation-name: rocket;
+  animation-duration: 8s;
+  animation-delay: 10s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in; }
+
+@keyframes rocket {
+  from {
+    left: -40px;
+    bottom: -60px; }
+  to {
+    left: 100%;
+    bottom: 100%; } }
+
 html {
   height: 100%; }
 
@@ -203,7 +257,8 @@ body {
   color: #FFF;
   background: url("../img/bg.jpeg") no-repeat center top;
   background-size: cover;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  overflow-x: hidden; }
 
 button, a {
   outline: none;
