--- a/scss/heading.scss
+++ b/scss/heading.scss
@@ -15,6 +15,8 @@
         font-family: 'Lilita One';
         background: rgba(0, 0, 0, 0.7);
         border-radius: 4px;
+        font-weight: normal;
+        text-shadow: 0px 1px 1px rgba(0,0,0,0.4);
 
         sup {
             font-size: 36px;
@@ -25,6 +27,7 @@
         display: block;
         font-size: 14px;
         text-align: center;
+        text-shadow: 0px 1px 1px rgba(0,0,0,0.4);
 
         a {
             color: #FFF;
