--- a/scss/twitter.scss
+++ b/scss/twitter.scss
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     background: rgba(0,0,0,0.6);
+    backdrop-filter: blur(6px);
 
     img {
         max-width: 930px;
