--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,7 @@
     font-family: 'Lilita One';
     color: #FFF;
     font-weight: normal;
+    text-align: center;
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4); }
   .funding p {
     margin: 0 auto;
