--- a/scss/funding.scss
+++ b/scss/funding.scss
@@ -14,6 +14,7 @@
         font-family: 'Lilita One';
         color: #FFF;
         font-weight: normal;
+        text-align: center;
         text-shadow: 0px 1px 1px rgba(0,0,0,0.4);
     }
 
