--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,8 @@
   backdrop-filter: blur(6px); }
   .funding h3 {
     margin: 0 0 20px 0;
+    width: 100%;
+    display: block;
     font-size: 48px;
     font-family: 'Lilita One';
     color: #FFF;
