--- a/scss/funding.scss
+++ b/scss/funding.scss
@@ -10,6 +10,8 @@
 
     h3 {
         margin: 0 0 20px 0;
+        width: 100%;
+        display: block;
         font-size: 48px;
         font-family: 'Lilita One';
         color: #FFF;
