--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,18 @@
     text-align: center;
     padding-bottom: 40px;
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4); }
+  .funding ul {
+    margin: 0;
+    padding-top: 20px;
+    list-style-type: none; }
+    .funding ul li {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 12px;
+      line-height: 16px;
+      text-align: center;
+      text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4); }
 
 .rocket {
   position: fixed;
