--- a/scss/funding.scss
+++ b/scss/funding.scss
@@ -29,4 +29,20 @@
         padding-bottom: 40px;
         text-shadow: 0px 1px 1px rgba(0,0,0,0.4);
     }
+
+    ul {
+        margin: 0;
+        padding-top: 20px;
+        list-style-type: none;
+
+        li {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+            line-height: 16px;
+            text-align: center;
+            text-shadow: 0px 1px 1px rgba(0,0,0,0.4);
+        }
+    }
 }
