--- a/scss/funding.scss
+++ b/scss/funding.scss
@@ -20,11 +20,54 @@
         text-shadow: 0px 1px 1px rgba(0,0,0,0.4);
     }
 
+    h4 {
+        margin: 0;
+        width: 100%;
+        display: block;
+        font-size: 24px;
+        font-family: 'Lilita One';
+        color: #FFF;
+        font-weight: normal;
+        text-align: center;
+        text-shadow: 0px 1px 1px rgba(0,0,0,0.4);
+
+        .hidden-address {
+            display: none;
+        }
+    }
+
+    .copy {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 40px;
+
+        .address {
+            font-size: 64px;
+            color: #FD8E28;
+            font-size: 64px;
+            font-family: 'Lilita One';
+            font-weight: normal;
+            cursor: pointer;
+        }
+
+        .btn {
+            display: block;
+            margin-left: 10px;
+            width: 48px;
+            height: 48px;
+            background: url('../img/icon-copy.svg') no-repeat center;
+            background-size: 48px;
+            border-radius: 4px;
+            border: none;
+        }
+    }
+
     p {
         margin: 0 auto;
         width: 100%;
         max-width: 930px;
-        font-size: 14px;
+        font-size: 18px;
         text-align: center;
         padding-bottom: 40px;
         text-shadow: 0px 1px 1px rgba(0,0,0,0.4);
@@ -32,17 +75,34 @@
 
     ul {
         margin: 0;
-        padding-top: 20px;
+        padding-bottom: 20px;
         list-style-type: none;
 
         li {
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 12px;
-            line-height: 16px;
+            font-size: 18px;
+            line-height: 18px;
             text-align: center;
+            text-transform: uppercase;
             text-shadow: 0px 1px 1px rgba(0,0,0,0.4);
+        }
+    }
+
+    @media screen and (max-width: 576px) {
+        .copy {
+            .address {
+                font-size: 36px;
+                font-size: 36px;
+            }
+    
+            .btn {
+                width: 36px;
+                height: 36px;
+                background: url('../img/icon-copy.svg') no-repeat center;
+                background-size: 36px;
+            }
         }
     }
 }
